# openfoodfacts_processing

./: LICENSE  pyproject.toml
src/: main.py
src/data_connector/: all_connection_getter.py  google_services_connection_getter.py
src/data_processor/: food_data_processor.py
src/data_retriever/: all_data_retriever.py  json_retriever.py
src/data_writer/: all_data_writer.py  bigquery_writer.py
src/utils/: dataclasses_utils.py  schemas.py
